<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Const" Id="{0976f416-79e0-432d-8783-ad93336e608b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	g_mArmNum :INT := 2;	
	g_mJntNum:INT:=7;
	
	g_deg2Rad :LREAL := pi/180.0;
	
	//DH joint angle at initial position
	g_jntDHInitPos:ARRAY[1..2,1..7] OF LREAL:=[0,-pi/2,pi/2,-pi,pi,-pi/2,0,      0,-pi/2,pi/2,0,pi,pi/2,0];
	
	//DH joint minmum position
	g_minJntDHPos:ARRAY[1..2,1..7] OF LREAL:=[-60*g_deg2Rad, -60*g_deg2Rad-pi/2,  -45*g_deg2Rad+pi/2, -150*g_deg2Rad-pi,  -135*g_deg2Rad+pi,  -62*g_deg2Rad-pi/2, -150*g_deg2Rad,
																					-60*g_deg2Rad, -60*g_deg2Rad-pi/2,  -45*g_deg2Rad+pi/2,  -90*g_deg2Rad,    -135*g_deg2Rad+pi,    -242*g_deg2Rad+pi/2, -150*g_deg2Rad];
	
	//DH joint minmum position
	g_maxJntDHPos:ARRAY[1..2,1..7] OF LREAL:=[60*g_deg2Rad,	 60*g_deg2Rad-pi/2,   40*g_deg2Rad+pi/2,  90*g_deg2Rad-pi,    135*g_deg2Rad+pi,  242*g_deg2Rad-pi/2, 150*g_deg2Rad,
																					60*g_deg2Rad,	 60*g_deg2Rad-pi/2,   40*g_deg2Rad+pi/2,   150*g_deg2Rad,    135*g_deg2Rad+pi,     62*g_deg2Rad+pi/2, 150*g_deg2Rad];
																		
	//data number for record and write													
	g_recordDataNum:INT:=13000;
	g_writeDataNum:INT:=5500;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>