<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_armTest" Id="{9233f480-c3b4-4571-af6f-106d9bd79296}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL	
	//come to test mode
	g_testMode:ARRAY[1..g_mArmNum] OF BOOL;
	
	//start motion
	g_startMotion:ARRAY[1..g_mArmNum] OF BOOL;
	
	//output the arm joint position
	g_armDHJntPos:ARRAY[1..g_mArmNum] OF Vec7d;
	g_armActJntPos:ARRAY[1..g_mArmNum] OF Vec7d;
	
	//test joint id and trajectory id
	g_jntId:ARRAY[1..g_mArmNum] OF INT;
	g_trajId:ARRAY[1..g_mArmNum] OF INT;
	
	//test step
	g_testStep:ARRAY[1..g_mArmNum] OF INT;
	
	//nest step
	g_nextStep:ARRAY[1..g_mArmNum] OF BOOL;	
	
	//clutch mode
	g_clutchMode:ARRAY[1..g_mArmNum] OF BOOL;
	
	//joint gap
	g_jntGap:ARRAY[1..g_mArmNum] OF Vec7d;
	
	//unbalanced Max
	g_unbalancedMax:ARRAY[1..g_mArmNum] OF Vec7d;
	
	//specific joint position friction
	g_jntTestPntFriction:ARRAY[1..g_mArmNum,1..g_mJntNum,1..3] OF LREAL;
	g_jntTestPntUnbalancedTrq:ARRAY[1..g_mArmNum,1..g_mJntNum,1..3] OF LREAL;
	
	//friction average and ratio
	g_CoulombFrictionAve:ARRAY[1..g_mArmNum,1..g_mJntNum] OF LREAL;
	g_CoulombFrictionRatio:ARRAY[1..g_mArmNum,1..g_mJntNum] OF LREAL;
	
	//date wait to write to file
	g_dataSum:INT:=13000;
	g_cmdDHJntPosD2,g_jntPosD2,g_jntTrqD2:ARRAY[1..g_mArmNum,1..g_mJntNum,1..13000] OF LREAL;
	g_cmdDHJntPosD3,g_jntPosD3,g_jntTrqD3:ARRAY[1..g_mArmNum,1..g_mJntNum,1..13000] OF LREAL;
	
	//write data
	g_writeData:ARRAY[1..g_mArmNum] OF BOOL;
	
	//during data write
	g_duringWriteData:ARRAY[1..g_mArmNum] OF BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>